tests/ast/positive/structs.gp
int main () {

dict myDict1 = {
    int krusty;
    bool crab; 
};

myDict1.remove(crab);

}

dict myDict2 = {
    string larryLobstah; 
    dict otherDict;
    int numbaONe;
};

string hewwo = myDict2.get(larryLobstah);
int Won = myDict2.get(numbaOne);
