tests/ast/negative/bad_asn.gp
int main() {
    int x = bool y;
}